# Copyright 2016 The Fuchsia Authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

static_library("system") {
  sources = [
    "datapipe.h",
    "event.cc",
    "event.h",
    "eventpair.cc",
    "eventpair.h",
    "handle.h",
    "handle_traits.h",
    "log.cc",
    "log.h",
    "msgpipe.cc",
    "msgpipe.h",
    "port.cc",
    "port.h",
    "process.cc",
    "process.h",
    "socket.cc",
    "socket.h",
    "task.h",
    "thread.cc",
    "thread.h",
    "vmo.cc",
    "vmo.h",
    "waitset.cc",
    "waitset.h",
  ]

  libs = [ "magenta" ]
}
